# shooty-face

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
lib/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  NativeActivity_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  (+354 more)
lib/SFML/share/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glyph_8hpp_source.html  Graphics_2Export_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  Network_2Export_8hpp_source.html  Network_8hpp_source.html  NonCopyable_8hpp_source.html  OpenGL_8hpp_source.html  OutputSoundFile_8hpp_source.html  (+349 more)
notes/: sfml.md  sync.sh
src/: AABB.cpp  AABB.hpp  CMakeLists.txt  barrier.cpp  barrier.hpp  bullet.cpp  bullet.hpp  clock.hpp  collision.cpp  collision.hpp  composite_entity.hpp  config.h.in  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  entity.inl  game.cpp  game.hpp  graphical.hpp  graphics.hpp  gun.cpp  gun.hpp  health.cpp  health.hpp  health_bar.cpp  health_bar.hpp  healthy.cpp  healthy.hpp  main.cpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  rate_limit.hpp  stub_main.cpp  tile_map.hpp  utils.cpp  utils.hpp
src/AI/: AI_bullet.cpp  AI_bullet.hpp  AI_enemy.cpp  AI_enemy.hpp  A_star.cpp  A_star.hpp
src/app/: config.h.in  main.cpp
src/components/: AI.hpp  component.hpp  graphics.hpp  health.hpp  phyics.hpp  physics.hpp
utests/: AABB_tests.cmake  AABB_tests.cpp  CMakeLists.txt  barrier_tests.cmake  barrier_tests.cpp  bullet_tests.cmake  bullet_tests.cpp  collision_tests.cmake  collision_tests.cpp  enemy_tests.cmake  enemy_tests.cpp  entity_tests.cmake  entity_tests.cpp  gun_tests.cmake  gun_tests.cpp  health_bar_tests.cmake  health_bar_tests.cpp  health_tests.cmake  healthy_tests.cmake  healthy_tests.cpp  mock_entity.hpp  player_tests.cmake  player_tests.cpp  rate_limit_tests.cmake  rate_limit_tests.cpp  stub_entity.hpp  test_list.cmake
utests/AI/: AI_bullet_tests.cmake  AI_bullet_tests.cpp  AI_enemy_tests.cmake  AI_enemy_tests.cpp  A_star_tests.cmake  A_star_tests.cpp
utests/mocks/: ai_mock.hpp  clock_mock.hpp  collision_mock.hpp  entity_mock.hpp  projectile_mock.hpp  rate_limit_mock.hpp
